ajout des abonnements et rajout des articles

--- a/article.html
+++ b/article.html
@@ -11,7 +11,7 @@
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="www.google.com">Smashing Citron</a>
+        <a class="navbar-brand" href="home.html">Smashing Citron</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,61 +21,65 @@
               <a class="nav-link" href="www.google.com">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="www.google.com">Pricing</a>
+              <a class="nav-link" href="abonnement.html">Abonnement</a>
             </li>
             </li>
           </ul>
         </div>
       </nav>
 
-
+    <div class="titre">
+        <h1>
+            Article a la une 
+        </h1>
+    </div>
     <!--Triple cards-->
     <div class="card-group">
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-home.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-caroussel.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-caroussel-2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card-group">
             <div class="card">
-              <img class="card-img-top" src="./Images/citron-home.jpeg" alt="Card image cap">
+              <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Article</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="./Images/citron-caroussel.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Article</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="./Images/citron-caroussel-2.jpg" alt="Card image cap">
+              <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Article</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
@@ -83,27 +87,29 @@
       </div>
       <div class="card-group">
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-home.jpeg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-caroussel.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         <div class="card">
-          <img class="card-img-top" src="./Images/citron-caroussel-2.jpg" alt="Card image cap">
+          <img class="card-img-top" src="./Images/geek.png" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Article</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
+          </div>
+      </div>
 </body>
 </html>
