--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   
     <!--NavBar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="www.google.com">Smashing Citron</a>
+        <a class="navbar-brand" href="home.html">Smashing Citron</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,12 +24,19 @@
               <a class="nav-link" href="www.google.com">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="www.google.com">Pricing</a>
+              <a class="nav-link" href="abonnement.html">Abonnement</a>
             </li>
             </li>
           </ul>
         </div>
       </nav>
+
+
+      <div class="titre">
+        <h1>
+            Article a la une 
+        </h1>
+      </div>
     <!--Carousel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -48,6 +55,9 @@
             <img class="d-block w-100" src="./Images/citron-caroussel-2.jpg" alt="Third slide">
           </div>
         </div>
+        <div class="d-flex justify-content-center w-100">
+          <a href="article.html"><button type="button" class="btn btn-light rounded-pill">Voir tous les article </button></a>
+      </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
