--- a/abonnement.html
+++ b/abonnement.html
@@ -11,62 +11,52 @@
 </head>
 <body>
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="home.html">Smashing Citron</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="www.google.com">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="abonnement.html">Abonnement</a>
-            </li>
-            </li>
-          </ul>
-        </div>
-      </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-4">
+      <a class="text-white h4" href="home.html">Smashing Citron</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="abonnement.html">Abonnement</a>
+          </li>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+      <!--Abonnement card-->
     <div class="card text-center">
         <div class="card-header">
-          Featured
+          Premium
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+          <h5 class="card-title">10,99€</h5>
+          <p class="card-text"> Accée a tous les articles, 2 ecran en simultanee, possibilite de telecharger l'article,accée hors connexion </p>
+          <a href="#" class="btn btn-primary">Choisir cette abonnement </a>
         </div>
       </div>
-      <!--Abonnement card-->
+      
       <div class="card text-center">
         <div class="card-header">
-          Featured
+          Classic
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+          <h5 class="card-title">9,99€</h5>
+          <p class="card-text">Accée tous les articles, 2 ecran simultanee</p>
+          <a href="#" class="btn btn-secondary">Choisir cette abonnement</a>
         </div>
       </div>
 
       <div class="card text-center">
         <div class="card-header">
-          Featured
+          Famille
         </div>
         <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+          <h5 class="card-title">16,99€</h5>
+          <p class="card-text"> Accée a tous les articles, 6 ecran en simultanee, possibilite de telecharger l'article,accée hors connexion,possibilite d'y raccrocher plusieur compte.</p>
+          <a href="#" class="btn btn-warning">Choisir cette abonnement</a>
         </div>
       </div>
 </body>
