--- a/home.html
+++ b/home.html
@@ -13,18 +13,15 @@
 <body>
   
     <!--NavBar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="home.html">Smashing Citron</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-4">
+        <a class="text-white h4" href="home.html">Smashing Citron</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="www.google.com">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="abonnement.html">Abonnement</a>
+              <a class="nav-link text-white" href="abonnement.html">Abonnement</a>
             </li>
             </li>
           </ul>
@@ -37,6 +34,7 @@
             Article a la une 
         </h1>
       </div>
+
     <!--Carousel-->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -56,7 +54,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center w-100">
-          <a href="article.html"><button type="button" class="btn btn-light rounded-pill">Voir tous les article </button></a>
+          <a href="allarticle.html"><button type="button" class="btn btn-light rounded-pill">Voir tous les article </button></a>
       </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
